added topbannar responsive styles

--- a/index.html
+++ b/index.html
@@ -16,65 +16,70 @@
 	<body>
 		<!-- Header Section -->
 		<header class="">
-			<nav class="navbar navbar-expand-lg fixed-top">
-				<div class="container">
-					<a class="navbar-brand" href="#">
-						<img src="icons/Logo.png" width="250px" height="60px" alt="" />
-					</a>
-					<button
-						class="navbar-toggler"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent"
-						aria-expanded="false"
-						aria-label="Toggle navigation"
-					>
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-							<li class="nav-item ms-3">
-								<a class="nav-link active" aria-current="page" href="#">Home</a>
-							</li>
-							<li class="nav-item ms-3">
-								<a class="nav-link" href="#">Product</a>
-							</li>
-							<li class="nav-item ms-3">
-								<a class="nav-link" href="#">About Us</a>
-							</li>
-							<li class="nav-item ms-3">
-								<a class="nav-link" href="#">Contact Us</a>
-							</li>
-						</ul>
+			<div class="mx-sm-5 mx-3">
+				<nav class="navbar navbar-expand-lg fixed-top">
+					<div class="container-fluid mx-sm-5 mx-3">
+						<a class="navbar-brand" href="#">
+							<img src="icons/Logo.png" class="navbar-brand-image" alt="" />
+						</a>
+						<button
+							class="navbar-toggler"
+							type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbarSupportedContent"
+							aria-controls="navbarSupportedContent"
+							aria-expanded="false"
+							aria-label="Toggle navigation"
+						>
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+								<li class="nav-item ms-3">
+									<a class="nav-link active" aria-current="page" href="#"
+										>Home</a
+									>
+								</li>
+								<li class="nav-item ms-3">
+									<a class="nav-link" href="#">Product</a>
+								</li>
+								<li class="nav-item ms-3">
+									<a class="nav-link" href="#">About Us</a>
+								</li>
+								<li class="nav-item ms-3">
+									<a class="nav-link" href="#">Contact Us</a>
+								</li>
+							</ul>
+						</div>
 					</div>
-				</div>
-			</nav>
-			<div
-				class="top-banner mx-sm-4 mx-1 mt-5 p-sm-5 p-3 d-flex flex-md-row flex-sm-column-reverse flex-column-reverse justify-content-between align-items-center h-80"
-			>
-				<div class="mt-lg-0 mt-3">
-					<img
-						class="img-fluid"
-						src="images/Group_33092_800x600_1_500x400.png"
-						alt=""
-					/>
-				</div>
-				<div class="">
-					<h1 class="lg:display-3 md:display-4 sm:display-5">
-						<span class="orange-text-color"> Nike React </span>
-						<br />
-						<span class="blue-text-color"> Infinity Run 2 </span>
-					</h1>
-					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry.
-					</p>
-					<button
-						class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
-					>
-						buy now <img src="icons/shopping-cart 1.png" width="40px" alt="" />
-					</button>
+				</nav>
+				<div
+					class="top-banner d-flex pb-5 container-fluid text-start flex-md-row flex-sm-column-reverse flex-column-reverse justify-content-between align-items-center"
+				>
+					<div class="mt-lg-0 mt-3 top-banner-left-side">
+						<img
+							class="img-fluid"
+							src="images/Group_33092_800x600_1_500x400.png"
+							alt=""
+						/>
+					</div>
+					<div class="top-banner-right-side ms-md-5 ms-0">
+						<h1 class="h1">
+							<span class="orange-text-color"> Nike React </span>
+							<br />
+							<span class="blue-text-color"> Infinity Run 2 </span>
+						</h1>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and typesetting
+							industry.
+						</p>
+						<button
+							class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+						>
+							buy now
+							<img src="icons/shopping-cart 1.png" width="40px" alt="" />
+						</button>
+					</div>
 				</div>
 			</div>
 		</header>
