added product,advantage and footer section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,307 @@
 		</header>
 		<!-- Header Section -->
 
+		<!-- Main Section -->
+		<main>
+			<section class="mx-sm-5 mx-3 mt-5">
+				<h1 class="text-uppercase mb-5">Casual Shoes</h1>
+
+				<div class="shoes mb-5">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded card-image-bg">
+									<img
+										src="images/pngegg 1.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+
+								<div class="card-body">
+									<h5 class="card-title">Nike Shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded card-image-bg">
+									<img
+										src="images/image 5.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+								<div class="card-body">
+									<h5 class="card-title">Sneakers Skate Shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded card-image-bg">
+									<img
+										src="images/Daco_1703273 1.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+								<div class="card-body">
+									<h5 class="card-title">Sneakers Basketball shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="mx-sm-5 mx-3 my-5">
+				<h1 class="text-uppercase mb-5">Formal Shoes</h1>
+
+				<div class="shoes mb-5">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded-4 card-image-bg">
+									<img
+										src="images/Rectangle 38.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+
+								<div class="card-body">
+									<h5 class="card-title">Nike Shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded-4 rounded card-image-bg">
+									<img
+										src="images/Rectangle 39.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+								<div class="card-body">
+									<h5 class="card-title">Sneakers Skate Shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="card border-0 rounded-2 shadow-lg">
+								<div class="border m-2 rounded-4 card-image-bg">
+									<img
+										src="images/Mask Group.png"
+										class="card-img-top img-fluid card-image"
+										alt="..."
+									/>
+								</div>
+								<div class="card-body">
+									<h5 class="card-title">Sneakers Basketball shoe</h5>
+									<p class="card-text">
+										Lorem Ipsum is simply dummy text of the printing and
+										typesetting industry.
+									</p>
+									<div
+										class="d-flex align-items-center justify-content-between"
+									>
+										<h3 class="card-price">$233</h3>
+										<button
+											class="btn blue-btn border-0 text-white text-uppercase px-4 py-2"
+										>
+											buy now
+											<img
+												src="icons/shopping-cart 1.png"
+												width="40px"
+												alt=""
+											/>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Advantage Section -->
+			<section
+				class="d-flex flex-lg-row flex-md-column-reverse flex-column-reverse align-items-center mx-sm-5 mx-3 my-5"
+			>
+				<div class="w-50 advantage-section-left">
+					<div
+						class="d-flex flex-sm-column text-sm-center text-center text-md-start flex-md-row flex-column align-items-center shadow-lg rounded p-3 mb-3"
+					>
+						<div class="">
+							<img
+								width="60"
+								height="60"
+								class="me-4"
+								src="icons/image 12.png"
+								alt=""
+							/>
+						</div>
+						<div class="">
+							<h3 class="mt-md-0 mt-sm-3 mt-3">Find the Perfect Fit</h3>
+							<p class="mb-0 mt-md-0 mt-sm-3 mt-3">
+								Everybody is different, which is why we offer styles for every
+								body.
+							</p>
+						</div>
+					</div>
+					<div
+						class="d-flex flex-sm-column text-sm-center text-center text-md-start flex-md-row flex-column align-items-center shadow-lg rounded p-3 mb-3"
+					>
+						<div class="">
+							<img
+								width="60"
+								height="60"
+								class="me-4"
+								src="icons/image 13.png"
+								alt=""
+							/>
+						</div>
+						<div class="">
+							<h3 class="mt-md-0 mt-sm-3 mt-3">Free Exchanges</h3>
+							<p class="mb-0 mt-md-0 mt-sm-3 mt-3">
+								One of the many reasons you can shop with peace of mind.
+							</p>
+						</div>
+					</div>
+					<div
+						class="d-flex flex-sm-column text-sm-center text-center text-md-start flex-md-row flex-column align-items-center shadow-lg rounded p-3 mb-3"
+					>
+						<div class="">
+							<img
+								width="60"
+								height="60"
+								class="me-4"
+								src="icons/image 14.png"
+								alt=""
+							/>
+						</div>
+						<div class="">
+							<h3 class="mt-md-0 mt-sm-3 mt-3">Contact Our Seller</h3>
+							<p class="mb-0 mt-md-0 mt-sm-3 mt-3">
+								They are here to help you. That's quite literally what we pay
+								them for.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div
+					class="ms-md-3 ms-0 mb-md-5 mb-5 mb-lg-0 w-50 advantage-section-right"
+				>
+					<img class="img-fluid" src="icons/XMLID 1.png" alt="" />
+				</div>
+			</section>
+		</main>
+		<!-- Main Section -->
+
+		<!-- footer -->
+		<footer class="py-5 footer-bg">
+			<p class="text-center text-dark fw-bold mb-0">
+				Copyright &copy; 2023 all right reserved
+			</p>
+		</footer>
+		<!-- footer -->
+
 		<!-- Bootstrap CDN -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
